--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "react-imask": "^7.1.3",
         "react-media-recorder": "^1.7.1",
         "react-number-format": "^5.3.0",
+        "react-photo-view": "^1.2.6",
         "react-qrcode-logo": "^2.9.0",
         "react-responsive": "^9.0.2",
         "react-router-dom": "^6.14.2",
