--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "react-photo-view": "^1.2.6",
         "react-qrcode-logo": "^2.9.0",
         "react-responsive": "^9.0.2",
+        "react-responsive-masonry": "^2.4.1",
         "react-router-dom": "^6.14.2",
         "react-text-mask": "^5.5.0",
         "react-use-audio-player": "^2.2.0",
@@ -56,6 +57,7 @@
         "@types/inputmask": "^5.0.7",
         "@types/react": "^18.2.15",
         "@types/react-dom": "^18.2.7",
+        "@types/react-responsive-masonry": "^2.1.3",
         "@types/react-text-mask": "^5.4.14",
         "@typescript-eslint/eslint-plugin": "^6.0.0",
         "@typescript-eslint/parser": "^6.0.0",
