--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "file-saver": "^2.0.5",
         "formik": "^2.4.3",
         "inputmask": "^5.0.9",
+        "lottie-react": "^2.4.0",
         "maskdata": "^1.3.3",
         "react": "^18.2.0",
         "react-audio-player": "^0.17.0",
