--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "date-fns-tz": "^3.0.0",
         "file-saver": "^2.0.5",
         "formik": "^2.4.3",
+        "framer-motion": "^12.0.0",
         "inputmask": "^5.0.9",
         "lottie-react": "^2.4.0",
         "maskdata": "^1.3.3",
