--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "@mui/icons-material": "^5.14.3",
         "@mui/material": "^5.14.4",
         "@mui/x-data-grid": "^6.19.3",
+        "@xyflow/react": "^12.4.3",
         "axios": "^1.4.0",
         "blob-util": "^2.0.2",
         "burgos-array": "^1.1.0",
@@ -48,6 +49,7 @@
         "react-text-mask": "^5.5.0",
         "react-use-audio-player": "^2.2.0",
         "react-use-measure": "^2.1.1",
+        "react-zoom-pan-pinch": "^3.7.0",
         "read-excel-file": "^5.8.1",
         "recharts": "^2.11.0",
         "socket.io-client": "^4.7.2",
