--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@dagrejs/dagre": "^1.1.4",
         "@emotion/react": "^11.11.1",
         "@emotion/styled": "^11.11.0",
         "@files-ui/react": "^1.0.8",
