--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
         "recharts": "^2.11.0",
         "socket.io-client": "^4.7.2",
         "styled-components": "^6.0.7",
+        "uid": "^2.0.2",
         "yup": "^1.4.0"
     },
     "devDependencies": {
