--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "@emotion/react": "^11.11.1",
         "@emotion/styled": "^11.11.0",
         "@files-ui/react": "^1.0.8",
+        "@hello-pangea/dnd": "^18.0.1",
         "@mantine/core": "^7.2.2",
         "@mantine/hooks": "^7.2.2",
         "@mui/icons-material": "^5.14.3",
@@ -35,8 +36,10 @@
         "inputmask": "^5.0.9",
         "lottie-react": "^2.4.0",
         "maskdata": "^1.3.3",
+        "prop-types": "^15.8.1",
         "react": "^18.2.0",
         "react-audio-player": "^0.17.0",
+        "react-beautiful-dragify": "^1.4.0",
         "react-dom": "^18.2.0",
         "react-icons": "^5.0.1",
         "react-imask": "^7.1.3",
