--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "file-saver": "^2.0.5",
         "formik": "^2.4.3",
         "framer-motion": "^12.6.2",
+        "fuse.js": "^7.1.0",
         "inputmask": "^5.0.9",
         "lottie-react": "^2.4.0",
         "maskdata": "^1.3.3",
