--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "inputmask": "^5.0.9",
         "lottie-react": "^2.4.0",
         "maskdata": "^1.3.3",
+        "numeral": "^2.0.6",
         "prop-types": "^15.8.1",
         "react": "^18.2.0",
         "react-audio-player": "^0.17.0",
@@ -65,6 +66,7 @@
     "devDependencies": {
         "@types/file-saver": "^2.0.5",
         "@types/inputmask": "^5.0.7",
+        "@types/numeral": "^2.0.5",
         "@types/react": "^18.2.15",
         "@types/react-dom": "^18.2.7",
         "@types/react-responsive-masonry": "^2.1.3",
