--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
         "react-text-mask": "^5.5.0",
         "react-use-audio-player": "^2.2.0",
         "react-use-measure": "^2.1.1",
+        "react-virtuoso": "^4.12.6",
         "react-zoom-pan-pinch": "^3.7.0",
         "read-excel-file": "^5.8.1",
         "recharts": "^2.11.0",
