--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "burgos-use-visible-callback": "^1.0.0",
         "date-fns": "^3.6.0",
         "date-fns-tz": "^3.0.0",
+        "emoji-picker-react": "^4.12.2",
         "file-saver": "^2.0.5",
         "formik": "^2.4.3",
         "framer-motion": "^12.6.2",
