--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
         "@mantine/hooks": "^7.2.2",
         "@mui/icons-material": "^5.14.3",
         "@mui/material": "^5.14.4",
-        "@mui/x-data-grid": "^7.27.1",
+        "@mui/x-data-grid": "^8.9.1",
+        "@tanstack/react-query": "^5.83.0",
         "@xyflow/react": "^12.4.3",
         "axios": "^1.4.0",
         "blob-util": "^2.0.2",
