--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@mui/icons-material": "^5.14.3",
         "@mui/material": "^5.14.4",
         "@mui/x-data-grid": "^8.9.1",
+        "@mui/x-date-pickers": "^8.9.0",
         "@tanstack/react-query": "^5.83.0",
         "@xyflow/react": "^12.4.3",
         "axios": "^1.4.0",
@@ -31,6 +32,7 @@
         "burgos-use-visible-callback": "^1.0.0",
         "date-fns": "^3.6.0",
         "date-fns-tz": "^3.0.0",
+        "dayjs": "^1.11.13",
         "emoji-picker-react": "^4.12.2",
         "file-saver": "^2.0.5",
         "formik": "^2.4.3",
