--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
         "react": "^18.2.0",
         "react-audio-player": "^0.17.0",
         "react-beautiful-dragify": "^1.4.0",
+        "react-dnd": "^16.0.1",
+        "react-dnd-html5-backend": "^16.0.1",
         "react-dom": "^18.2.0",
         "react-icons": "^5.0.1",
         "react-imask": "^7.1.3",
@@ -59,6 +61,7 @@
         "react-text-mask": "^5.5.0",
         "react-use-audio-player": "^2.2.0",
         "react-use-measure": "^2.1.1",
+        "react-virtuoso": "^4.13.0",
         "react-zoom-pan-pinch": "^3.7.0",
         "read-excel-file": "^5.8.1",
         "recharts": "^2.11.0",
