--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "dev": "vite",
         "build": "vite build",
         "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-        "preview": "vite preview"
+        "preview": "vite preview",
+        "deploy": "dockerbp agenciaboz/wagazap && ssh wagazap \"cd /home/wagazap/wagazap && docker compose pull && docker compose up -d\""
     },
     "dependencies": {
         "@dagrejs/dagre": "^1.1.4",
